# mogwai

./: .gitignore  Cargo.toml  Dockerfile  README.md  cpu-stress-test.yaml  deploy_files.sh  endpoints.md  makefile  mem-stress-test.yaml  mogAI.py  stress-test-job.yaml  stress-test.yaml  sys_info.py
cli/: Cargo.toml
cli/src/: main.rs  mogAI.py
controller/: .gitignore  Cargo.toml  Dockerfile  controller.py  requirements.txt
controller/src/: main.rs
engine/: Cargo.toml  Dockerfile
engine/src/: cpu_stress.rs  disk_stress.rs  lib.rs  main.rs  memory_stress.rs  thread_manager.rs
frontend/: index.html
gui/: Cargo.toml
gui/src/: gui.rs  main.rs
kubernetes/: controller-deployment.yaml  controller-ingress.yaml  controller-rbac.yaml  controller-service.yaml  engine-deployment.yaml  engine-service.yaml  my-controller-deployment.yaml  my-engine-deployment.yaml  stress-test.yaml
src/: cpu_stress.rs  disk_stress.rs  fork_stress.rs  gui.rs  lib.rs  main.rs  memory_stress.rs  stress_cpu.rs
