[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0"
tokio = { version = "1", features = ["full"]}
serde = {version = "1", features =["derive"]}
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[[bin]]
name = "controller"
path = "src/main.rs"