[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0"
kube = { version = "0.99", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
tokio = { version = "1", features = ["full"]}
serde = {version = "1", features =["derive"]}
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
serde_json = "1.0"
[[bin]]
name = "controller"
path = "src/main.rs"