[package]
name = "stress-test"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.34.1"
rand = "0.9.0"
libc = "0.2.170"
clap = { version = "4.0", features = ["derive"] }
num_cpus = "1.13"
actix-web = "4"
actix-cors = "0"
tokio = { version = "1", features = ["full"]}
serde = {version = "1", features =["derive"]}
uuid = { version = "1", features = ["v4"] }
once_cell = "1.21.3"

[[bin]]
name = "stress-test"
path = "src/main.rs"

